fix: resolve console errors and banner z-index issue

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,7 @@
   display: flex;
   position: fixed;
   width: 100%;
+  z-index: 100;
 
   h1 {
     font-size: 0.9em;
